cmake_minimum_required(VERSION 3.10)
project (hello CXX)
set(CMAKE_CXX_STANDARD 11)
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR})
set( NAME_SRC main.cpp)
#set(CMAKE_PREFIX_PATH  "C:/libs/opencv") # path where to find a package
find_package(OpenCV REQUIRED)
add_executable(${PROJECT_NAME} ${NAME_SRC})
target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_link_libraries(${PROJECT_NAME} ${OpenCV_LIBS})
