cmake_minimum_required(VERSION 3.10)
project (hello CXX)
set(CMAKE_CXX_STANDARD 11)
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR})
set( NAME_SRC main.cpp)
set(OpenCV_DIR "C:/libs/OpenCV455")
find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
#find_package(OpenCV REQUIRED PATHS "C:/libs/OpenCV-MinGW-Build-OpenCV-4.5.5-x64/x64/mingw/lib")
add_executable(${PROJECT_NAME} ${NAME_SRC})
target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_link_libraries(${PROJECT_NAME} ${OpenCV_LIBS})
